# VScience

./: Cargo.toml  README.md  pyproject.toml
crates/vscience-cli/: Cargo.toml  tests.rs
crates/vscience-cli/environment/: errors.rs  mod.rs
crates/vscience-cli/src/: commands.rs  main.rs
crates/vscience-experiments/: Cargo.toml
docs/: features.md  getting_started.md
src/: commands.rs  main.rs  tests.rs
src/environment/: errors.rs  mod.rs
