[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "vscience"
version = "0.1.0"
description = "A fast project manager and documentation maker for sharing Data Science projects"
requires-python = ">=3.8"

dependencies = [
    "uv>=0.11.0"
]

[tool.maturin]
binding = "bin"